Refactor code for consistency and readability; streamline record definitions and formatting. Add openapi documentation