@@ -1,5 +1,7 @@
 package github.codepawfect.clockinservice.adapter.config;
 
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -17,91 +19,89 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
-
-/**
- * Configuration class for security settings.
- */
+/** Configuration class for security settings. */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    private final JwtAuthenticationFilter jwtAuthFilter;
-    private final AuthenticationEntryPoint unauthorizedHandler;
+  private final JwtAuthenticationFilter jwtAuthFilter;
+  private final AuthenticationEntryPoint unauthorizedHandler;
 
-    public SecurityConfig(
-            JwtAuthenticationFilter jwtAuthFilter,
-            AuthenticationEntryPoint unauthorizedHandler) {
-        this.jwtAuthFilter = jwtAuthFilter;
-        this.unauthorizedHandler = unauthorizedHandler;
-    }
+  public SecurityConfig(
+      JwtAuthenticationFilter jwtAuthFilter, AuthenticationEntryPoint unauthorizedHandler) {
+    this.jwtAuthFilter = jwtAuthFilter;
+    this.unauthorizedHandler = unauthorizedHandler;
+  }
 
-    /**
-     * Creates a password encoder bean for securely hashing passwords.
-     * <p>
-     * This implementation uses BCrypt, a strong adaptive hashing function that
-     * automatically incorporates a random salt and is resistant to brute-force attacks.
-     * </p>
-     *
-     * @return a BCryptPasswordEncoder instance
-     */
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+  /**
+   * Creates a password encoder bean for securely hashing passwords.
+   *
+   * <p>This implementation uses BCrypt, a strong adaptive hashing function that automatically
+   * incorporates a random salt and is resistant to brute-force attacks.
+   *
+   * @return a BCryptPasswordEncoder instance
+   */
+  @Bean
+  public PasswordEncoder passwordEncoder() {
+    return new BCryptPasswordEncoder();
+  }
 
-    /**
-     * Creates an authentication manager bean for authenticating users.
-     * <p>
-     * The authentication manager verifies credentials during login attempts
-     * and is used by the authentication filter to create authentication tokens.
-     * </p>
-     *
-     * @param authConfig the authentication configuration
-     * @return the authentication manager
-     * @throws Exception if there is an issue creating the authentication manager
-     */
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
-    }
+  /**
+   * Creates an authentication manager bean for authenticating users.
+   *
+   * <p>The authentication manager verifies credentials during login attempts and is used by the
+   * authentication filter to create authentication tokens.
+   *
+   * @param authConfig the authentication configuration
+   * @return the authentication manager
+   * @throws Exception if there is an issue creating the authentication manager
+   */
+  @Bean
+  public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig)
+      throws Exception {
+    return authConfig.getAuthenticationManager();
+  }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-        configuration.setExposedHeaders(List.of("Set-Cookie"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE","OPTIONS"));
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+    configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+    configuration.setAllowedHeaders(List.of("*"));
+    configuration.setAllowCredentials(true);
+    configuration.setExposedHeaders(List.of("Set-Cookie"));
+    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration);
+    return source;
+  }
 
-    /**
-     * Configures the security filter chain that processes HTTP requests.
-     *
-     * @param http the HttpSecurity to configure
-     * @return the built security filter chain
-     * @throws Exception if there is an issue configuring the security filters
-     */
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(c -> c.configurationSource(corsConfigurationSource()))
-                .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth ->
-                        auth.requestMatchers("/api/auth/register").hasRole("ADMIN")
-                                .requestMatchers("/api/auth/login").permitAll()
-                                .anyRequest().authenticated()
-                );
+  /**
+   * Configures the security filter chain that processes HTTP requests.
+   *
+   * @param http the HttpSecurity to configure
+   * @return the built security filter chain
+   * @throws Exception if there is an issue configuring the security filters
+   */
+  @Bean
+  public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    http.csrf(AbstractHttpConfigurer::disable)
+        .cors(c -> c.configurationSource(corsConfigurationSource()))
+        .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
+        .sessionManagement(
+            session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .authorizeHttpRequests(
+            auth ->
+                auth.requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html")
+                    .permitAll()
+                    .requestMatchers("/api/auth/register")
+                    .hasRole("ADMIN")
+                    .requestMatchers("/api/auth/login")
+                    .permitAll()
+                    .anyRequest()
+                    .authenticated());
 
-        http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+    http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
-        return http.build();
-    }
+    return http.build();
+  }
 }
